# clx-etl

./: .dockerignore  .woodpecker.yml  Dockerfile  constants.py  docker-compose.yml  pyproject.toml  scheduler.py
.woodpecker/: production.yml  staging.yml
databases/clickhouse/: __init__.py  models.py
databases/mysql/: __init__.py
exchanges/: _base_.py
exchanges/aster/: __init__.py
exchanges/binance/: __init__.py
exchanges/bitget/: __init__.py
exchanges/bitmart/: __init__.py
exchanges/bybit/: __init__.py
exchanges/gate/: __init__.py
exchanges/mexc/: __init__.py
exchanges/okx/: __init__.py
exchanges/weex/: perp.py
exchanges/woox/: __init__.py  perp.py  spot.py
jobs/: sync_klines.py  sync_symbols.py
src/: deploy.py
src/databases/mysql/: __init__.py
src/exchanges/binance/: perp.py
src/exchanges/bitget/: perp.py
src/exchanges/bybit/: perp.py
src/exchanges/okx/: perp.py
src/flows/: sync_cex_inflow.py  sync_funding_rate.py  sync_kalshi.py  sync_long_short_ratio.py  sync_macro_indicators.py  sync_onchain_tx.py  sync_symbols.py
src/jobs/: sync_macro_indicators.py
src/macro_markets/: kalshi.py  macro_indicators.py
src/utils/: __init__.py  prefect_decorators.py  start_logo.py
