[project]
name = "hs-exchange-reader"
version = "0.1.0"
description = "Async exchange symbol sync and reader service"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy==2.0.*",
    "apscheduler==3.11.0",
    "requests[socks]",
    "python-dotenv==1.1.1",
    "loguru==0.7.3",
    "pymysql==1.1.2",
    "cryptography==46.0.3",
    "aiomysql==0.3.2",
    "aiohttp==3.13.2",
    "clickhouse-sqlalchemy==0.3.2",
    "clickhouse-driver==0.2.10",
    "clickhouse-connect==0.9.2",
    "pandas==2.3.3"
]

# 可选：开发依赖（lint、类型检查、测试）
[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "types-requests",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ===============================
# Ruff 配置
# ===============================
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app", "core", "jobs", "tests"]

# 选择的规则集
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort import sorting
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "TID",  # tidy-imports
    "N",    # pep8-naming
    "ASYNC",# async safety
    "RUF",  # ruff-specific
]

# 忽略规则
ignore = [
    "E501",  # 行长度由 formatter 控制
    "B008",  # 允许可变默认参数
    "N818",  # 不强制 Exception 命名
]

# 排除目录
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    "venv",
    "build",
    "dist",
]

# ===============================
# Ruff 子模块
# ===============================
[tool.ruff.isort]
known-first-party = ["app", "core", "jobs"]
combine-as-imports = true
force-sort-within-sections = true
lines-between-types = 1
order-by-type = true

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88

# ===============================
# MyPy 配置
# ===============================
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
